tests/paczka1/small_fuzzy/67638694.err
Error in line 6: cIypjM8G A98 95,5
Error in line 8: V0jS A143 47,6
Error in line 2: QTe A98 47,7
Error in line 13: QTe A143 15,5
